--- a/service.yml
+++ b/service.yml
@@ -12,4 +12,5 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8000 # Порт контейнера
+      targetPort: 8000
+      name: http # Додано назву порту
